--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.27.2",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.3",
+    "@tabler/icons-react": "^3.14.0",
+    "clsx": "^2.1.1",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
